[package]
name = "ryther-core"
version = "0.1.0"
edition = "2021"
description = "Ryther Protocol - Asynchronous DAG-based BFT with Native Parallel EVM"
license = "MIT"

[[bin]]
name = "ryther"
path = "src/bin/ryther.rs"

[dependencies]
# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blst = "0.3"              # BLS12-381 signatures

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"   # Serde support for large arrays
serde_json = "1.0"        # JSON serialization
bincode = "1.3"

# Concurrency
dashmap = "5.5"           # Lock-free concurrent hashmap
parking_lot = "0.12"      # Fast mutexes
crossbeam = "0.8"         # Channels and utilities
num_cpus = "1.16"         # CPU count detection

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"           # Async utilities

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"             # Byte buffer utilities

# HTTP/RPC server
axum = "0.7"              # HTTP framework
tower = "0.4"             # Service utilities
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "performance"
harness = false

